--- a/src/public/index4.html
+++ b/src/public/index4.html
@@ -1,41 +1,92 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
-    body {
-        background-color: #333;
-        color: white;
-    }
-
     .link {
-        stroke: #ccc;
+        stroke: #000;
+        stroke-width: 1.5px;
     }
 
-    .node text {
-        pointer-events: none;
-        font: 10px sans-serif;
+    .node {
+        cursor: move;
+        fill: #ccc;
+        stroke: #000;
+        stroke-width: 1.5px;
     }
 
-    .white {
-        fill: rgb(255,255,255);
-        stroke: rgb(255,255,255);
+    .node.fixed {
+        fill: #f00;
     }
 </style>
 
-<html>
-    <body>
 
-        Hi
+<body>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script>
 
-        <canvas id="bubblr"><canvas>
+        var width = 960,
+            height = 500;
 
-        Bye
+        var force = d3.layout.force()
+            .size([width, height])
+            .charge(-400)
+            .linkDistance(40)
+            .on("tick", tick);
 
+        var drag = force.drag()
+            .on("dragstart", dragstart)
+            .on("dragend", dragend);
 
+        var svg = d3.select("body").append("svg")
+            .attr("width", width)
+            .attr("height", height);
 
+        var link = svg.selectAll(".link"),
+            node = svg.selectAll(".node");
 
+        d3.json("json/graph.json", function(error, graph) {
+            force
+                .nodes(graph.nodes)
+                .links(graph.links)
+                .start();
 
-        <script src="http://d3js.org/d3.v3.min.js"></script>
-        
-    </body>
+            link = link.data(graph.links)
+                .enter().append("line")
+                .attr("class", "link");
 
-</html>
+            node = node.data(graph.nodes)
+                .enter().append("circle")
+                .attr("class", "node")
+                .attr("r", 22)
+                .on("dblclick", dblclick)
+                .on("click", click)
+                .call(drag);
+        });
+
+        function tick() {
+            link.attr("x1", function(d) { return d.source.x; })
+                .attr("y1", function(d) { return d.source.y; })
+                .attr("x2", function(d) { return d.target.x; })
+                .attr("y2", function(d) { return d.target.y; });
+
+            node.attr("cx", function(d) { return d.x; })
+                .attr("cy", function(d) { return d.y; });
+        }
+
+        function click(d) {
+
+        }
+
+        function dblclick(d) {
+            d3.select(this).classed("fixed", d.fixed = false);
+        }
+
+        function dragstart(d) {
+            d3.select(this).classed("fixed", d.fixed = true);
+        }
+
+        function dragend(d) {
+            d3.select(this).classed("fixed", d.fixed = false);
+        }
+
+    </script>
+</body>
