--- a/src/public/index4.html
+++ b/src/public/index4.html
@@ -5,6 +5,8 @@
     html, body {
         margin: 0;
         padding: 0;
+        background-color: black;
+        overflow: hidden;
     }
 
     #box {
@@ -12,76 +14,97 @@
         height: 100%;
     }
 
-    .node {
-        fill: green;
-    }
-
-    .node .text{
-        color: red;
-    }
-
-    .text {
-        color: orange;
-    }
-
-    .cursor {
-        fill: none;
-        stroke: brown;
-        pointer-events: none;
-    }
-
     .link {
-        stroke: #999;
+        fill: white;
+    }
+
+    .node {
+    }
+
+    .node .nodetext{
+        fill: white;
+        font-size: 30px;
+    }
+
+    .node .circle {
+        cursor: pointer;
+    }
+
+    #panel{
+        width: 300px;
+        height: 300px;
+        border-radius: 20px;
+        background-color: rgba(255, 255, 255, 0.7);
+        display: none;
+        position: absolute;
+        left: 0px;
+        top: 0px;
     }
 
 </style>
 
 <body>
     <div id="box"></div>
+    <div id="panel">
+        <input id="url" type="text" placeholder="url">
+    </div>
 
     <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script>
 
-        var w = 500,
-            h = 500,
-            m = [40, 240, 40, 240];
 
-        //var color = d3.scale.category10();
+        var w = 300;
+        var h = 300;
+        var m = [40, 240, 40, 240];
 
         var force = d3.layout.force()
-            .charge(-1000)
-            .linkDistance(120)
+            .charge(-5000)
+            .linkDistance(300)
             .size([w, h])
             .on("tick", tick);
 
-        var nodes = force.nodes();
-        var links = force.links();
+        var nodes = force.nodes(),
+            links = force.links();
 
+        // var vis = d3.select("#box").append("svg:svg")
+        //     .attr("width", w)
+        //     .attr("height", h);
         var drag = force.drag()
             .on("dragstart", dragstart)
             .on("dragend", dragend);
 
-        var vis = d3.select("#box").append("svg:svg")
-                .attr("class","svg_container")
-                .style("overflow", "scroll")
-                .style("background-color","#EEEEEE")
-                .attr("viewBox", "0 0 " + w + " " + h)
-                .attr("preserveAspectRatio", "xMidYMid meet")
-            .append("svg:g")
-                .attr("class", "drawarea")
-            .append("svg:g")
-                .attr("transform", "translate(" + m[3] + "," + m[0] + ")");
+        var vis = d3.select("#box")
+                    .append("svg:svg")
+                    .attr("class","svg_container")
+                    .style("overflow", "scroll")
+                    .attr("viewBox", "0 0 " + w + " " + h)
+                    .attr("preserveAspectRatio", "xMidYMid meet")
+                .append("svg:g")
+                    .attr("class", "drawarea")
+                .append("svg:g")
+                    .attr("transform", "translate(" + m[3] + "," + m[0] + ")");
 
-        // var svg = d3.select("#box").append("svg")
-        //     .attr("class","svg_container")
-        //     .attr("viewBox", "0 0 " + width + " " + height )
-        //     .attr("preserveAspectRatio", "xMinYMin")
-        //     .call(d3.behavior.zoom()
-        //             .scaleExtent([0.5, 5])
-        //             .on("zoom", zoom));
+        function tick() {
+            vis.selectAll("g.node")
+                .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
 
-        // var node = vis.selectAll(".node"),
-        //     link = vis.selectAll(".link");
+            vis.selectAll("line.link")
+                .attr("x1", function(d) { return d.source.x; })
+                .attr("y1", function(d) { return d.source.y; })
+                .attr("x2", function(d) { return d.target.x; })
+                .attr("y2", function(d) { return d.target.y; });
+        };
+
+        function createNode () {
+            return {
+                id: guid(),
+                url: "http://google.com",
+                x: Math.random()*400,
+                y: Math.random()*400,
+                visible: false
+            }
+        };
 
         d3.select("svg")
             .call(
@@ -89,62 +112,67 @@
                 .on("zoom", zoom)
             ).on("dblclick.zoom", null);
 
-        function createNode () {
-            return {
-                id: guid(),
-                x: Math.random()*400,
-                y: Math.random()*400
-            }
-        };
-
         nodes.push(createNode());
-        start();
+        restart();
 
-        function start() {
-            var link = vis.selectAll(".link").data(force.links(), function(d) {
-                return d.source.id + "-" + d.target.id;
-            });
+        function restart() {
+            var link =
+                vis.selectAll("line.link")
+                .data(links, function(d) { return d.source.id + "-" + d.target.id; });
+
             link.enter()
-                .insert("line", ".node")
-                .attr("class", "link");
+                .insert("svg:line", "g.node")
+                .attr("class", "link")
+                .attr("stroke", function(d) {
+                    return "SkyBlue"
+                })
+                .style("stroke-width", 4);
+
             link.exit().remove();
 
-            var node = vis.selectAll(".node").data(force.nodes(), function(d) {
-                return d.id;
-            });
-            node.enter()
-                .append("svg:circle")
-                .attr("r", 8)
-                .attr("class", "node")
-                .on("dblclick", dblclick)
-                .on("click", click)
-                .text(function(d) {
-                    return d.id + ""
-                })
-                .call(drag);
+            var node =
+                vis.selectAll("g.node")
+                .data(nodes, function(d) { return d.id;});
 
-            node.append("svg:text")
-                .attr("class", "text")
-                .attr("dx", 12)
-                .attr("dy", ".35em")
+            var nodeEnter = node.enter()
+                .append("svg:g")
+                .attr("class", "node")
+                .call(force.drag);
+
+            var images = nodeEnter.append("svg:image")
+                .attr("class", "circle")
+                .attr("xlink:href", function(d) {
+                    return "images/folder.svg"
+                })
+                .attr("x", -8)
+                .attr("y", -8)
+                .on("click", click)
+                .on("dblclick", dblclick)
+                .attr("width", 60)
+                .attr("height", 60);
+
+            var texts = nodeEnter.append("svg:text")
+                .attr("class", "nodetext")
+                .attr("dx", 80)
+                .attr("dy", 35)
                 .text(function(d) {
-                    return "testing";
+                    return "test.js"
                 });
+
+            var rects = nodeEnter.append("rect")
+                .attr("rx", 6)
+                .attr("ry", 6)
+                .attr("x", -50)
+                .attr("y", -100)
+                .attr("class", "rect")
+                .attr("width", 100)
+                .attr("height", 100)
+                .style("display", "none")
+                .style("fill", d3.scale.category20c());
+
             node.exit().remove();
 
             force.start();
-        }
-
-        function tick() {
-            vis.selectAll(".node")
-                .attr("cx", function(d) { return d.x; })
-                .attr("cy", function(d) { return d.y; })
-
-            vis.selectAll(".link")
-                .attr("x1", function(d) { return d.source.x; })
-                .attr("y1", function(d) { return d.source.y; })
-                .attr("x2", function(d) { return d.target.x; })
-                .attr("y2", function(d) { return d.target.y; });
         }
 
         function guid() {
@@ -157,8 +185,14 @@
             s4() + '-' + s4() + s4() + s4();
         }
 
-        function click(d) {
-
+        function click (d) {
+            d.visible = !d.visible;
+            if (d.visible) {
+                d3.select(this.parentNode).select('.rect').style("display", "inline");
+            } else {
+                d3.select(this.parentNode).select('.rect').style("display", "none");
+            }
+            restart();
         }
 
         function dblclick(d) {
@@ -170,7 +204,7 @@
                 target: d
             })
 
-            start();
+            restart();
         }
 
         function dragstart(d) {
@@ -183,18 +217,216 @@
 
         function zoom() {
             var scale = d3.event.scale,
-                translation = d3.event.translate,
-                tbound = -h * scale,
-                bbound = h * scale,
-                lbound = (-w + m[1]) * scale,
-                rbound = (w - m[3]) * scale;
-                // limit translation to thresholds
-                // translation = [
-                //     Math.max(Math.min(translation[0], rbound), lbound),
-                //     Math.max(Math.min(translation[1], bbound), tbound)
-                // ];
+            translation = d3.event.translate,
+            tbound = -h * scale,
+            bbound = h * scale,
+            lbound = (-w + m[1]) * scale,
+            rbound = (w - m[3]) * scale;
+            // limit translation to thresholds
+            // translation = [
+            //     Math.max(Math.min(translation[0], rbound), lbound),
+            //     Math.max(Math.min(translation[1], bbound), tbound)
+            // ];
             d3.select(".drawarea")
                 .attr("transform", "translate(" + translation + ")" + " scale(" + scale + ")");
         }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        //
+        //
+        //
+        //
+        // var w = 500,
+        //     h = 500,
+        //     m = [40, 240, 40, 240];
+        //
+        // //var color = d3.scale.category10();
+        //
+        // var force = d3.layout.force()
+        //     .charge(-1000)
+        //     .linkDistance(120)
+        //     .size([w, h])
+        //     .on("tick", tick);
+        //
+        // var nodes = force.nodes();
+        // var links = force.links();
+        //
+        // var drag = force.drag()
+        //     .on("dragstart", dragstart)
+        //     .on("dragend", dragend);
+        //
+        // var vis = d3.select("body").append("svg:svg")
+        //         .attr("class","svg_container")
+        //         .attr("viewBox", "0 0 " + w + " " + h)
+        //         .attr("preserveAspectRatio", "xMidYMid meet")
+        //     .append("svg:g")
+        //         .attr("class", "drawarea")
+        //     .append("svg:g")
+        //         .attr("transform", "translate(" + m[3] + "," + m[0] + ")");
+        //
+        // // var svg = d3.select("#box").append("svg")
+        // //     .attr("class","svg_container")
+        // //     .attr("viewBox", "0 0 " + width + " " + height )
+        // //     .attr("preserveAspectRatio", "xMinYMin")
+        // //     .call(d3.behavior.zoom()
+        // //             .scaleExtent([0.5, 5])
+        // //             .on("zoom", zoom));
+        //
+        // // var node = vis.selectAll(".node"),
+        // //     link = vis.selectAll(".link");
+        //
+        // d3.select("svg")
+        //     .call(
+        //         d3.behavior.zoom()
+        //         .on("zoom", zoom)
+        //     ).on("dblclick.zoom", null);
+        //
+        // function createNode () {
+        //     return {
+        //         id: guid(),
+        //         x: Math.random()*400,
+        //         y: Math.random()*400
+        //     }
+        // };
+        //
+        // for (var i = 0; i < 2000; i += 1) {
+        //     nodes.push(createNode());
+        // }
+        // start();
+        //
+        // function start() {
+        //     var link = vis.selectAll(".link")
+        //         .data(links, function(d) {
+        //             return d.source.id + "-" + d.target.id;
+        //         })
+        //     link.enter()
+        //         .insert("line", ".node")
+        //         .attr("class", "link");
+        //     link.exit().remove();
+        //
+        //     var node = vis.selectAll(".node")
+        //         .data(nodes, function(d) {
+        //             return d.id;
+        //         });
+        //
+        //     node.enter()
+        //         .append("svg:circle")
+        //         .attr("class", "node")
+        //         .attr("r", 8)
+        //         .on("dblclick", dblclick)
+        //         .on("click", click)
+        //         .call(drag);
+        //
+        //     // node.append("svg:circle")
+        //     //     .attr("class", "circle")
+        //     //     .attr("r", 8);
+        //     //
+        //     // node.append("image")
+        //     //     .attr("xlink:href", "https://github.com/favicon.ico")
+        //     //     .attr("x", -8)
+        //     //     .attr("y", -8)
+        //     //     .attr("width", 16)
+        //     //     .attr("height", 16);
+        //     //
+        //     // node.append("svg:text")
+        //     //     .attr("class", "text")
+        //     //     .attr("dx", 12)
+        //     //     .attr("dy", ".35em")
+        //     //     .text(function(d) {
+        //     //         return "testing";
+        //     //     });
+        //     node.exit().remove();
+        //
+        //     force.start();
+        // }
+        //
+        // function tick() {
+        //     vis.selectAll(".node")
+        //         .attr("cx", function(d) { return d.x; })
+        //         .attr("cy", function(d) { return d.y; })
+        //
+        //     vis.selectAll(".link")
+        //         .attr("x1", function(d) { return d.source.x; })
+        //         .attr("y1", function(d) { return d.source.y; })
+        //         .attr("x2", function(d) { return d.target.x; })
+        //         .attr("y2", function(d) { return d.target.y; });
+        // }
+        //
+        // function guid() {
+        //     function s4() {
+        //         return Math.floor((1 + Math.random()) * 0x10000)
+        //         .toString(16)
+        //         .substring(1);
+        //     }
+        //     return s4() + s4() + '-' + s4() + '-' + s4() + '-' +
+        //     s4() + '-' + s4() + s4() + s4();
+        // }
+        //
+        // function click(d) {
+        //
+        // }
+        //
+        // function dblclick(d) {
+        //     var newNode = createNode();
+        //     nodes.push(newNode);
+        //
+        //     links.push({
+        //         source: newNode,
+        //         target: d
+        //     })
+        //
+        //     start();
+        // }
+        //
+        // function dragstart(d) {
+        //     d3.select(this).classed("fixed", d.fixed = true);
+        // }
+        //
+        // function dragend(d) {
+        //     d3.select(this).classed("fixed", d.fixed = false);
+        // }
+        //
+        // function zoom() {
+        //     var scale = d3.event.scale,
+        //         translation = d3.event.translate,
+        //         tbound = -h * scale,
+        //         bbound = h * scale,
+        //         lbound = (-w + m[1]) * scale,
+        //         rbound = (w - m[3]) * scale;
+        //         // limit translation to thresholds
+        //         // translation = [
+        //         //     Math.max(Math.min(translation[0], rbound), lbound),
+        //         //     Math.max(Math.min(translation[1], bbound), tbound)
+        //         // ];
+        //     d3.select(".drawarea")
+        //         .attr("transform", "translate(" + translation + ")" + " scale(" + scale + ")");
+        // }
     </script>
 </body>
